--- a/pro.html
+++ b/pro.html
@@ -15,7 +15,7 @@
   <div class="about">
      <!-- <img class="fl" src="photo/3.jpg" title="profile picture"> -->
      <p>
-        I am Ketsebaot Ertumo. I am a <b>Website Developer</b> and graduate of <b>Electrical and Computer Engineering</b> 
+        I am Ketsebaot Ertumo, I am a <b>Website Developer</b> and graduate of <b>Electrical and Computer Engineering</b> 
         from Hawassa University (<em>Hawassa Institute of Technology @2022 Hawassa, Ethiopia</em>).<br><br>As a recent graduate, 
         I have solid knowledge of Electrical Engineering and different technological knowledge, Engineering softwares as well 
         practical experience in this areas. During my cooperative education placements, I had successful experience in different 
@@ -23,14 +23,14 @@
         projects, I was nearly always organized the work and present the results. And During internship time with ICT department, 
         I got experience of team work and they appreciated and gave training regularly. In addition, I found that my problem 
         solving skills were enhanced by working as a part of a team and Considration of other's ideas.<br><br>I have different 
-        skills such as C++, Java, HTML, CSS, JavaScript, Node,js, Express, React, Tailwind, Next, and databases with Mongodb,PostgreSQL,SQL,mariadb and 
-        from softwares such as MATLAB, CISCO, Proteus, and have also skills on server inistallation and network installations and others.<br><br><br>
+        skills such as C++, Java, HTML, CSS, JavaScript, Nodejs, Express, React, React-native, Tailwind, Next, Typescript and databases with Mongodb, PostgreSQL, SQL, mariadb and 
+        from softwares such as MATLAB, CISCO, Proteus, and have also skills on server inistallation and network installations and others. And also i have take Cyber Security course and training.<br><br><br>
      </p>
    </div>
-<h1 class="port" >Portfolio</h1>
+<h1 id="port" style='font-size: 40px'>Portfolio</h1>
 <p class="p1">As a website developer, I had work projects like myPortfolio, web forms, digital clocks, calculator, date convertor (Gregorian to ethiopian), 
-   password generator, scraping website, blog and others. Now, I am a Software Engineer at TechEthio IT Solution plc</p>
-<button type="submit" class="back"><a href="index.html"> back to Home</a></button>
+   password generator, scraping website, blog and others. Currently, I am a Software Engineer at TechEthio Software Campany.</p>
+<button type="submit" class="back"><a href="index.html"> << back to Home</a></button>
 </body>
 </html>
 
