--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
       <a class="a" href="#myp"><i class="fa fa-home"></i> Home</a>
       <a class="a" href="pro.html">About</a>
       <a class="a" href="pro.html">Portfolio</a>
-      <a class="a" href="#links">Contact</a>
+      <a class="a" href="links.html">Contact Us</a>
       <!-- <a class="a" href="https://github.com/Ketsebaot-Ertumo"><i class="fa-brands fa-github"></i></a>
       <a class="a" href="https://linkedin.com/in/ketsebaot-ertumo-133346245"><i class="fa-brands fa-linkedin"></i></a><br> -->
       </nav>
   </div>
   <div class="bg" id="myp">
-    <img class="pp" src="photo/3.jpg"><br><br>
+    <img class="pp" src="photo/1.jpg"><br><br>
     <div class="me">
       <h1 class="dp" title="I am a Software Engineer">I am a Software Engineer at TechEthio and <br>an Electrical and Computer Engineer.</h1>
       <em title="It's My word!">{Interest, Believe, Start, Work hard, then <strong>Done</strong> with him called <b>Jesus</b>.}</em><br>
